20081122 disk/disk.c: fix a track length calculation bug (more of bug #2312217)
         (Gergely Szasz).
20081125 scld.c: fix loading of dock/exrom information from snapshots (Fred).
20081129 disk/disk.c: limit weak sector handling to fix Coin-Op Hits (more of
         bug #2312217) (Gergely Szasz).
20081129 disk/disk.c: one instance of plus3_fix wasn't updated (thanks, Stuart
         Brady) (Fred).
20081129 configure.in,man/fuse.1,README: final tweaks for 0.10.0 release
	 (Release_0_10_0-branch).
20081201 fuse.c: update libspectrum version needed (Release_0_10_0-branch).
20081202 ui/gtk/debugger.c: begin replacing the deprecated GtkCList interface
	 with GtkTreeView/GtkTreeModel.
20081203 configure.in,fuse.c,hacking/{ChangeLog,Makefile.am},Makefile.am,
	 man/fuse.1,README,ui/win32/Makefile.am: merge Release_0_10_0-branch
	 changes onto trunk.
20081206 ui/fb/Makefile.am: distribute fbmouse.h (thanks, rkd77) (Fred).
20081210 Makefile.am,compat/unix/file.c: must open files for writing with
         O_TRUNC to ensure that any old data is cleared out. Also fix a
         dependency problem (thanks, Matthew Westcott).
20081210 ChangeLog,configure.in,man/fuse.1,README: update for 0.10.0.1 release.
20081210 ui/gtk/debugger.c: final bit of GtkCList removal from this file.
20081210 snapshot.c: remove fallback from +3/+3e to +2A as +3 will now
	 always be available.
20081214 disk/disk.c: relax "Track-Info" check (Gergely Szasz; thanks, Simon
	 Owen).
20081214 README,configure.in: remove --with-local-prefix as we no longer use
         lib765 or libdsk (Fred).
20081215 ui/widget/options-header.pl: remove unnecessary use directive (Fred).
20081215 event.[ch],disk/fdd.c: fix issue with FDD motor events preventing
         both +3 disk drives from being used (bug #2424700) (Gergely Szasz).
20081215 event.[ch],rzx.c,spectrum.c,tape.c,timer/timer.[ch]: tidy new event
	 removal function a bit, and make functions which can't error return
	 void.